--- a/bos_management/Web/src/main/webapp/pages/system/menu.html
+++ b/bos_management/Web/src/main/webapp/pages/system/menu.html
@@ -17,49 +17,216 @@
 <script src="../../js/easyui/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$(function() {
-		$("#grid").datagrid({
-			toolbar : [ {
-				id : 'add',
-				text : '添加菜单',
-				iconCls : 'icon-add',
-				handler : function() {
-					location.href = 'menu_add.html';
+
+		var datagrid; //定义全局变量datagrid
+		var editRow = undefined; //定义全局变量：当前编辑的行
+
+		// 定义列
+		var columns = [ [ {
+			field : 'id',
+			title : '编号',
+			width : 200,
+			editor : {
+				type : 'validatebox',
+				options : {
+					required : true
 				}
-			} ],
-			url : '../../menuAction_pageQuery.action',
-			pageList : [ 30, 50, 100 ],
-			pagination : true,
-			fit : true,
-			columns : [ [ {
-				field : 'id',
-				title : '编号',
-				width : 200
-			}, {
-				field : 'name',
-				title : '名称',
-				width : 200
-			}, {
-				field : 'description',
-				title : '描述',
-				width : 200
-			}, {
-				field : 'priority',
-				title : '优先级',
-				width : 200
-			}, {
-				field : 'page',
-				title : '路径',
-				width : 200
-			} ] ]
+			}
+		}, {
+			field : 'name',
+			title : '名称',
+			width : 200,
+			editor : {
+				type : 'validatebox',
+				options : {
+					required : true
+				}
+			}
+		}, {
+			field : 'description',
+			title : '描述',
+			width : 200,
+			editor : {
+				type : 'validatebox',
+				options : {
+					required : false
+				}
+			}
+		}, {
+			field : 'priority',
+			title : '优先级',
+			width : 200,
+			editor : {
+				type : 'validatebox',
+				options : {
+					required : true
+				}
+			}
+		}, {
+			field : 'page',
+			title : '路径',
+			width : 200,
+			editor : {
+				type : 'validatebox',
+				options : {
+					required : false
+				}
+			}
+		} ] ];
+
+		// 工具栏
+		var toolbar = [ {
+			text : '添加',
+			iconCls : 'icon-add',
+			handler : doAdd
+		}, '-', {
+			text : '删除',
+			iconCls : 'icon-remove',
+			handler : doDelete
+		}, '-', {
+			text : '修改',
+			iconCls : 'icon-edit',
+			handler : doEdit
+		}, '-', {
+			text : '保存',
+			iconCls : 'icon-save',
+			handler : doSave
+		}, '-', {
+			text : '取消编辑',
+			iconCls : 'icon-cancel',
+			handler : doCancle
+		}, '-' ];
+
+		function doAdd() {//添加列表的操作按钮添加，修改，删除等
+
+			/*          //添加时先判断是否有开启编辑的行，如果有则把开户编辑的那行结束编辑
+			     if (editRow != undefined) {
+			     datagrid.datagrid("endEdit", editRow);
+			     }
+			     //添加时如果没有正在编辑的行，则在datagrid的第一行插入一行
+			     if (editRow == undefined) {
+			     datagrid.datagrid("insertRow", {
+			     index : 0, // index start with 0
+			     row : {
+
+			     }
+			     });
+			     //将新插入的那一行开户编辑状态
+			     datagrid.datagrid("beginEdit", 0);
+			     //给当前编辑的行赋值
+			     editRow = 0;
+			     }
+			 */
+
+			location.href = 'menu_add.html';
+
+		}
+
+		function doDelete() {
+			//删除时先获取选择行
+			var rows = datagrid.datagrid("getSelections");
+			//选择要删除的行
+			if (rows.length > 0) {
+				$.messager.confirm("提示", "你确定要删除吗?", function(r) {
+					if (r) {
+						var ids = [];
+						for (var i = 0; i < rows.length; i++) {
+							ids.push(rows[i].id);
+						}
+						//将选择到的行存入数组并用,分隔转换成字符串，
+						//本例只是前台操作没有与数据库进行交互所以此处只是弹出要传入后台的id
+						alert(ids.join(','));
+					}
+				});
+			} else {
+				$.messager.alert("提示", "请选择要删除的行", "error");
+			}
+		}
+
+		function doEdit() {
+			//修改时要获取选择到的行
+			var rows = datagrid.datagrid("getSelections");
+			//如果只选择了一行则可以进行修改，否则不操作
+			if (rows.length == 1) {
+				//修改之前先关闭已经开启的编辑行，当调用endEdit该方法时会触发onAfterEdit事件
+				if (editRow != undefined) {
+					datagrid.datagrid("endEdit", editRow);
+				}
+				//当无编辑行时
+				if (editRow == undefined) {
+					//获取到当前选择行的下标
+					var index = datagrid.datagrid("getRowIndex", rows[0]);
+					//开启编辑
+					datagrid.datagrid("beginEdit", index);
+					//把当前开启编辑的行赋值给全局变量editRow
+					editRow = index;
+					//当开启了当前选择行的编辑状态之后，
+					//应该取消当前列表的所有选择行，要不然双击之后无法再选择其他行进行编辑
+					datagrid.datagrid("unselectAll");
+				}
+			}
+		}
+
+		function doSave() {
+			//保存时结束当前编辑的行，自动触发 onAfterEdit 事件如果要与后台交互可将数据通过Ajax提交后台
+			datagrid.datagrid("endEdit", editRow);
+		}
+
+		function doCancle() {
+			//取消当前编辑行把当前编辑行罢undefined回滚改变的数据,取消选择的行
+			editRow = undefined;
+			datagrid.datagrid("rejectChanges");
+			datagrid.datagrid("unselectAll");
+		}
+
+		$("body").css({
+			visibility : "visible"
+		});
+
+		datagrid = $("#grid").datagrid({
+			url : '../../menuAction_pageQuery.action', //请求的数据源
+			iconCls : 'icon-save', //图标
+			pagination : true, //显示分页
+			pageList : [ 30, 50, 100 ], //页大小下拉选项此项各value是pageSize的倍数
+			fit : true, //datagrid自适应宽度
+			fitColumn : false, //列自适应宽度
+			striped : true, //行背景交换
+			border : false,
+			idField : 'id', //主键
+			columns : columns,
+			toolbar : toolbar,
+			onAfterEdit : function(rowIndex, rowData, changes) {
+				//endEdit该方法触发此事件
+				console.info(rowData);
+				editRow = undefined;
+				// 发起一个请求,保存运单的数据
+				$.post("../../menuAction_save.action", rowData, function(data) {
+					console.log(rowData);
+					if (data == "0") {
+						$.messager.alert("提示", "数据录入失败,请检查数据", "warning")
+					}
+				})
+
+			},
+			onDblClickRow : function(rowIndex, rowData) {
+				//双击开启编辑行
+				if (editRow != undefined) {
+					datagrid.datagrid("endEdit", editRow);
+				}
+				if (editRow == undefined) {
+					datagrid.datagrid("beginEdit", rowIndex);
+					editRow = rowIndex;
+				}
+			}
 		});
 	});
 </script>
 </head>
 
-<body class="easyui-layout">
-	<div data-options="region:'center'">
-		<table id="grid"></table>
-	</div>
+<body class="easyui-layout" style="visibility: hidden;">
+    <div region="center" border="false">
+        <table id="grid"></table>
+    </div>
 </body>
 
 </html>
